[tool.poetry]
name = "money-lover-reporter"
version = "0.1.0"
description = ""
authors = ["Sebastian Villegas"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydash = "^5.1.1"
beautifulsoup4 = "^4.11.1"
google-cloud-language = "^2.6.0"
googletrans = "4.0.0-rc1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
