[project]
name = "money-lover-reporter"
version = "0.1.0"
description = ""
authors = [
    {name = "Sebastian Villegas"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydash (>=5.1.1,<6.0.0)",
    "beautifulsoup4 (>=4.11.1,<5.0.0)",
    "google-cloud-language (>=2.6.0,<3.0.0)",
    "googletrans (==4.0.0-rc1)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "fpho"
url = "https://files.pythonhosted.org"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

